# matrix3

./: .env_example  .gitignore  Pipfile  cli.py  cli_shell.py  linting.cmd  main.py  pyproject.toml  readme.md  test.py  wp_links_PhD2025.yaml
Scheme/: data.py  data2024.py  data2025.py  data2025.txt  diagramm_bak_2024.gv  diagramm_bak_2024_en.gv  diagramm_bak_2024_ua.gv  diagramm_bak_2025.gv  diagramm_bak_2025_en.gv  diagramm_bak_2025_ua.gv  dotrun.cmd  gen_gv.py  html_gen.py  prepost_extract.py  prerequisites.json  prerequisites_2024.json  prerequisites_2025.json  pypeline.py  requisites_bachelor_2024.html  requisites_bachelor_2025.html
Scheme/templates/: template.html
core/: config.py  data_manipulation.py  desktop.ini  excel_exporter.py  exceptions.py  file_utils.py  handlers.py  html_generator.py  junja_environment.py  logging_config.py  models.py  parse_index_links.py  render_html.py  validators.py  wordpress_client.py  wordpress_uploader.py
data/: PhD2025.yaml  bachelor2024.yaml
docs/: index.html  report_PhD2024.html  report_PhD2025.html  report_bachelor2024.html  report_bachelor2024.xlsx  report_bachelor2025.html  report_bachelor2025.xlsx  report_magister2024.html  report_magister2024.xlsx  report_magister2025.html  report_magister2025.xlsx  requisites_bachelor_2024.html  requisites_bachelor_2025.html
extra_data/: discipline_content.yaml  glossary.yaml  lecturers.yaml
programm_data/: PhD2024.yaml  PhD2025.yaml  bachelor2024.yaml  bachelor2025.yaml  desktop.ini  magister2024.yaml  magister2025.yaml
reports/: index.html  report_PhD2024.html  report_PhD2025.html  report_bachelor2024.html  report_bachelor2025.html  report_magister2024.html  report_magister2025.html
reports/assets/: styles.css  tooltip.js
templates/: desktop.ini  discipline_template.html  index_template.html  report_template.html  syllabus_template.html
tests/: test_wordpress_client.py
wp_links/: wp_links_PhD2024.yaml  wp_links_PhD2025.yaml  wp_links_bachelor2024.yaml  wp_links_bachelor2025.yaml  wp_links_magister2024.yaml  wp_links_magister2025.yaml
