[project]
name = "matrix3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0 ; python_full_version >= '3.8'",
    "certifi==2025.10.5 ; python_full_version >= '3.7'",
    "charset-normalizer==3.4.3 ; python_full_version >= '3.7'",
    "colorama==0.4.6 ; python_full_version >= '2.7'",
    "dotenv==0.9.9",
    "et-xmlfile==2.0.0 ; python_full_version >= '3.8'",
    "idna==3.10 ; python_full_version >= '3.6'",
    "iniconfig==2.1.0 ; python_full_version >= '3.8'",
    "jinja2==3.1.6 ; python_full_version >= '3.7'",
    "logger==1.4",
    "markupsafe==3.0.3 ; python_full_version >= '3.9'",
    "numpy==2.3.3 ; python_full_version >= '3.11'",
    "openpyxl==3.1.5 ; python_full_version >= '3.8'",
    "packaging==25.0 ; python_full_version >= '3.8'",
    "pandas==2.3.3 ; python_full_version >= '3.9'",
    "pluggy==1.6.0 ; python_full_version >= '3.9'",
    "prompt-toolkit==3.0.52 ; python_full_version >= '3.8'",
    "pydantic==2.12.0 ; python_full_version >= '3.9'",
    "pydantic-core==2.41.1 ; python_full_version >= '3.9'",
    "pygments==2.19.2 ; python_full_version >= '3.8'",
    "pytest==8.4.2 ; python_full_version >= '3.9'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
    "python-dotenv==1.1.1 ; python_full_version >= '3.9'",
    "python-slugify==8.0.4 ; python_full_version >= '3.7'",
    "pytz==2025.2",
    "pyyaml==6.0.3 ; python_full_version >= '3.8'",
    "requests==2.32.5 ; python_full_version >= '3.9'",
    "requests>=2.32.5",
    "responses==0.25.8 ; python_full_version >= '3.8'",
    "six==1.17.0 ; python_full_version >= '2.7'",
    "tabulate==0.9.0 ; python_full_version >= '3.7'",
    "text-unidecode==1.3",
    "typing-extensions==4.15.0 ; python_full_version >= '3.9'",
    "typing-inspection==0.4.2 ; python_full_version >= '3.9'",
    "tzdata==2025.2 ; python_full_version >= '2'",
    "urllib3==2.5.0 ; python_full_version >= '3.9'",
    "wcwidth==0.2.14 ; python_full_version >= '3.6'",
]

[tool.ruff]
# Проверка стиля и автофиксы
line-length = 88
lint.select = ["E", "W", "F", "C90", "I", "Q", "ANN"]
# Автофикс там, где возможно (trailing spaces, пустые строки, отступы)
fix = true

# Конкретные ошибки для пробелов и пустых строк
lint.ignore = ["E501"]
# W291 — trailing whitespace
# W293 — blank line contains whitespace
# E302 — две пустые строки перед top-level функцией или классом
# E305 — одна пустая строка внутри класса между методами

exclude = [
    "tests",
    ".env"
]

[tool.black]
line-length = 88
target-version = ["py310"]
# Black автоматически форматирует длинные аргументы функций и строки
